# rag-with-gfs

./: .gitignore  README.md  add_recommendations.py  main.py  politica_hibrida.txt  pyproject.toml  test_tool.py  translate_all_markdown.py  translate_nb04_complete.py  translate_notebooks.py  translate_notebooks_final.py  verify_notebook_logic.py
notebooks/: 01_data_exploration.ipynb  02_gfs_setup.ipynb  03_gfs_experiments.ipynb  04_custom_rag_baseline.ipynb  05_comparison_analysis.ipynb
reports/: comparison_report.json
src/: __init__.py  custom_rag.py  data_loader.py  gfs_client.py  utils.py
