[project]
name = "rag-with-gfs"
version = "0.1.0"
description = "Comparing Google GFS with custom RAG implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.33.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pyarrow>=18.0.0",
]
